--- a/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
+++ b/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
@@ -38,7 +38,7 @@
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="transfers" tableName="Virements"
-      [displayTotalLines]="true" *ngIf="displayedColumns && displayedColumns.length>0 ">
+      [isSmallestHeight]="true" [displayTotalLines]="true" *ngIf="displayedColumns && displayedColumns.length>0 ">
     </sort-table>
   </div>
 </div>
