--- a/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.html
@@ -4,8 +4,8 @@
   *ngIf="invoice.invoiceStatus.id==invoiceStatusSend.id || invoice.invoiceStatus.id==invoiceStatusReceived.id || invoice.invoiceStatus.id==invoiceStatusCreditNoteReceived.id">
   <div class="advise" *ngIf="advisedPayment && advisedPayment.length>0">
     <h3>Paiements conseillés par Osiris :</h3>
-    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="advisedPayment"
-      tableName="Paiements conseillés">
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="advisedPayment" [noPaddingBottom]="true"
+      [noMaxHeight]="true" tableName="Paiements conseillés">
     </sort-table>
   </div>
   <div class=" advise">
