--- a/client/src/app/modules/miscellaneous/components/attachments/attachments.component.html
+++ b/client/src/app/modules/miscellaneous/components/attachments/attachments.component.html
@@ -13,7 +13,7 @@
       </button>
     </div>
     <sort-table [columns]="displayedColumns" [actions]="tableActions" [values]="filteredAttachments"
-      tableName="Pièce jointes" [filterText]="searchText">
+      [noPaddingBottom]="true" [noMaxHeight]="true" tableName="Pièce jointes" [filterText]="searchText">
     </sort-table>
   </div>
 </div>
