--- a/client/src/app/modules/miscellaneous/components/automatic-mail-list/automatic-mail-list.component.html
+++ b/client/src/app/modules/miscellaneous/components/automatic-mail-list/automatic-mail-list.component.html
@@ -6,7 +6,7 @@
       </mat-form-field>
     </div>
     <sort-table [columns]="displayedColumns" [actions]="tableActions" [values]="customerMails"
-      tableName="Mails automatiques" [filterText]="searchText">
+      tableName="Mails automatiques" [filterText]="searchText" [isSmallerHeight]="true">
     </sort-table>
   </div>
 </div>
