--- a/client/src/app/modules/monitoring/components/batch-list/batch-list.component.html
+++ b/client/src/app/modules/monitoring/components/batch-list/batch-list.component.html
@@ -30,6 +30,7 @@
     </tr>
   </table>
   <sort-table [actions]="batchDetailsActions" [columns]="batchDetailsColomns" [values]="batchDetails"
-    tableName="Détails des batch" *ngIf="batchDetailsColomns && batchDetailsColomns.length>0 ">
+    [noPaddingBottom]="true" [noMaxHeight]="true" tableName="Détails des batch"
+    *ngIf="batchDetailsColomns && batchDetailsColomns.length>0 ">
   </sort-table>
 </div>
