--- a/client/src/app/modules/quotation/components/debour/debour.component.html
+++ b/client/src/app/modules/quotation/components/debour/debour.component.html
@@ -1,4 +1,4 @@
 <div class="mat-elevation-z2 form-div" *ngIf="provision   ">
-  <sort-table [refreshTable]="refreshTable" [columns]="displayedColumns" [values]="debours"
+  <sort-table [refreshTable]="refreshTable" [columns]="displayedColumns" [values]="debours" [noMaxHeight]="true"
     tableName="Débours"></sort-table>
 </div>
