--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -1,10 +1,11 @@
-<div *ngIf="quotation && quotation.id" class=" form-div min-height ">
+<div *ngIf="quotation && quotation.id" class=" form-div   ">
   <div *ngIf="customerOrderInvoices && customerOrderInvoices.length>0">
     <p>
       Factures clientes :
     </p>
     <sort-table [actions]="invoicesActions" [columns]="customerInvoicesColumns" [values]="customerOrderInvoices"
-      tableName="Factures" *ngIf="customerInvoicesColumns && customerInvoicesColumns.length>0 ">
+      [noMaxHeight]="true" [noPaddingBottom]="true" tableName="Factures"
+      *ngIf="customerInvoicesColumns && customerInvoicesColumns.length>0 ">
     </sort-table>
   </div>
   <div *ngIf="customerOrderProviderInvoices && customerOrderProviderInvoices.length>0" class="description-table ">
@@ -12,7 +13,8 @@
       Factures fournisseurs :
     </p>
     <sort-table [actions]="invoicesActions" [columns]="providerInvoicesColumns" [values]="customerOrderProviderInvoices"
-      tableName="Factures" *ngIf="providerInvoicesColumns && providerInvoicesColumns.length>0 ">
+      [noMaxHeight]="true" [noPaddingBottom]="true" tableName="Factures"
+      *ngIf="providerInvoicesColumns && providerInvoicesColumns.length>0 ">
     </sort-table>
   </div>
   <table class="mat-table mat-mdc-table mdc-data-table__table full-width  mat-elevation-z8 table description-table  ">
