--- a/client/src/app/modules/tiers/components/phone-teams/search-phone.component.html
+++ b/client/src/app/modules/tiers/components/phone-teams/search-phone.component.html
@@ -1,7 +1,7 @@
 <div class=" form-div">
   <div class=" full-width">
-    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="phoneSearchs"
-      tableName="Recherche téléphone">
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="phoneSearchs" [noPaddingBottom]="true"
+      [noMaxHeight]="true" tableName="Recherche téléphone">
     </sort-table>
   </div>
 </div>
