--- a/client/src/app/modules/administration/components/referentials/referential-special-offer/referential-special-offer.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-special-offer/referential-special-offer.component.html
@@ -6,7 +6,8 @@
   </div>
   <div class="table-container-scroll">
     <sort-table [columns]="displayedColumns" (onRowClick)="selectEntity($event)" [values]="entities"
-      tableName="Référentiel" [idRowSelected]="idRowSelected" [filterText]="searchText"></sort-table>
+      [noMaxHeight]="true" [noPaddingBottom]="true" tableName="Référentiel" [idRowSelected]="idRowSelected"
+      [filterText]="searchText"></sort-table>
   </div>
 </div>
 <div class="mat-elevation-z2 form-div" *ngIf="selectedEntity ">
