--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
@@ -1,6 +1,7 @@
-<div class="wrapper-div" *ngIf="values && columns">
-  <table mat-table matTableExporter matSort [dataSource]="dataSource" class="mat-elevation-z8 table full-width"
-    #exporter="matTableExporter">
+<div *ngIf="values && columns" class="wrapper-div"
+  [ngClass]="{'wrapper-div-smaller': isSmallerHeight,'wrapper-div-smallest' : isSmallestHeight, 'wrapper-max-height': !noMaxHeight}">
+  <table mat-table matTableExporter matSort [dataSource]="dataSource" class="mat-elevation-z8 table full-width "
+    [ngClass]="{'padding-bottom': !noPaddingBottom }" #exporter="matTableExporter">
     <ng-container matColumnDef="actions" *ngIf="internalActions">
       <th mat-header-cell mat-sort-header *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
@@ -82,7 +83,7 @@
         </td>
       </ng-container>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row class="sticky" *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="rowClicked(row)" [ngClass]="{'pointer':onRowClick && onRowClick.observers && onRowClick.observers.length>0,
       'selected-mat-row':idRowSelected && row.id && idRowSelected==row.id,
       'color-warn':true}">
