--- a/client/src/app/modules/quotation/components/provision-list/provision-list.component.html
+++ b/client/src/app/modules/quotation/components/provision-list/provision-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div" [ngClass]="{'min-height':!isForDashboard }">
+<div class="mat-elevation-z2 form-div">
   <div class=" full-width">
     <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && affaireSearch && !isForTiersIntegration">
       <tr>
@@ -35,6 +35,7 @@
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="affaires" tableName="Affaires"
+      [noMaxHeight]="isForDashboard" [noPaddingBottom]="isForDashboard"
       *ngIf="displayedColumns && displayedColumns.length>0 " [displayTotalLines]="true">
     </sort-table>
   </div>
