--- a/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
+++ b/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div" [ngClass]="{'min-height':!isForDashboard}">
+<div class="mat-elevation-z2 form-div">
   <div class="full-width">
     <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && quotationSearch">
       <tr>
@@ -31,6 +31,7 @@
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="quotations" tableName="Devis"
+      [noMaxHeight]="isForDashboard" [noPaddingBottom]="isForDashboard" [isSmallerHeight]="isForTiersIntegration"
       *ngIf="displayedColumns && displayedColumns.length>0 " [displayTotalLines]="true">
     </sort-table>
   </div>
