--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -10,8 +10,8 @@
   </div>
   <div class="table-container-scroll">
     <sort-table [columns]="displayedColumns" (onRowClick)="selectResponsable($event)" [values]="tiers.responsables"
-      tableName="Responsables" [filterText]="searchText" [actions]="tableActions"
-      [idRowSelected]="selectedResponsable?selectedResponsable.id:undefined"></sort-table>
+      [noPaddingBottom]="true" [noMaxHeight]="true" tableName="Responsables" [filterText]="searchText"
+      [actions]="tableActions" [idRowSelected]="selectedResponsable?selectedResponsable.id:undefined"></sort-table>
   </div>
   <div [hidden]="selectedResponsable==null" class="responsable-tabs">
     <form [formGroup]="principalForm" *ngIf="selectedResponsable!=null">
