--- a/client/src/app/modules/tiers/components/tiers-list/tiers-list.component.html
+++ b/client/src/app/modules/tiers/components/tiers-list/tiers-list.component.html
@@ -33,7 +33,8 @@
             </tr>
           </table>
           <sort-table [actions]="tableActionTiers" [columns]="displayedColumnsTiers" [values]="tiers" tableName="Tiers"
-            *ngIf="displayedColumnsTiers && displayedColumnsTiers.length>0 " [displayTotalLines]="true">
+            [isSmallestHeight]="true" *ngIf="displayedColumnsTiers && displayedColumnsTiers.length>0 "
+            [displayTotalLines]="true">
           </sort-table>
         </div>
       </div>
@@ -76,7 +77,7 @@
             </tr>
           </table>
           <sort-table [actions]="tableActionResponsable" [columns]="displayedColumnsResponsables"
-            [values]="responsables" tableName="Responsables"
+            [values]="responsables" tableName="Responsables" [isSmallestHeight]="true"
             *ngIf="displayedColumnsResponsables && displayedColumnsResponsables.length>0 " [displayTotalLines]="true">
           </sort-table>
         </div>
