--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -79,6 +79,7 @@ mini-fab-add mat-form-field.mat-mdc-form-field, mat-option, .mat-mdc-cell {
 .form-div {
   margin-top: 15px;
   padding: 10px;
+  padding-bottom: 0px;
 }
 
 .pointer {
