--- a/client/src/app/modules/accounting/components/accounting-bilan/accounting-bilan.component.html
+++ b/client/src/app/modules/accounting/components/accounting-bilan/accounting-bilan.component.html
@@ -3,10 +3,14 @@
     <table class="full-width table-fixed-layout">
       <tr>
         <td>
-          <generic-date-range-picker [(modelStart)]="accountingBalanceSearch.startDate"
-            [(modelEnd)]="accountingBalanceSearch.endDate" label="Plage de recherche" [form]="accountingBilanForm"
-            propertyNameStart="startDate" propertyNameEnd="endDate" (onDateChange)="putEndDateSameYear()">
-          </generic-date-range-picker>
+          <generic-datepicker [(model)]="accountingBalanceSearch.startDate" label="Date de début"
+            [form]="accountingBilanForm" propertyName="startDate" [isMandatory]="false"
+            [isDisabled]="false"></generic-datepicker>
+        </td>
+        <td>
+          <generic-datepicker [(model)]="accountingBalanceSearch.endDate" label="Date de fin"
+            [form]="accountingBilanForm" propertyName="endDate" [isMandatory]="false"
+            [isDisabled]="false"></generic-datepicker>
         </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="refreshBilan()" class="add-button">
