--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -22,10 +22,14 @@
             [form]="accountingRecordForm" propertyName="hideLettered"></generic-toggle>
         </td>
         <td *ngIf="tiersToDisplay==undefined">
-          <generic-date-range-picker [(modelStart)]="accountingRecordSearch.startDate"
-            [(modelEnd)]="accountingRecordSearch.endDate" label="Plage de recherche" [form]="accountingRecordForm"
-            propertyNameStart="startDate" propertyNameEnd="endDate" (onDateChange)="putEndDateSameYear()">
-          </generic-date-range-picker>
+          <generic-datepicker [(model)]="accountingRecordSearch.startDate" label="Date de début"
+            [form]="accountingRecordForm" propertyName="startDate" [isMandatory]="false"
+            [isDisabled]="false"></generic-datepicker>
+        </td>
+        <td *ngIf="tiersToDisplay==undefined">
+          <generic-datepicker [(model)]="accountingRecordSearch.endDate" label="Date de fin"
+            [form]="accountingRecordForm" propertyName="endDate" [isMandatory]="false"
+            [isDisabled]="false"></generic-datepicker>
         </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchRecords()" class="add-button">
