--- a/client/src/app/modules/invoicing/components/refund-list/refund-list.component.html
+++ b/client/src/app/modules/invoicing/components/refund-list/refund-list.component.html
@@ -15,9 +15,12 @@
             propertyName="label" [isMandatory]="false" [isDisabled]="false"></generic-input>
         </td>
         <td>
-          <generic-date-range-picker [(modelStart)]="refundSearch.startDate" [(modelEnd)]="refundSearch.endDate"
-            label="Plage de recherche" [form]="refundForm" propertyNameStart="startDate" propertyNameEnd="endDate">
-          </generic-date-range-picker>
+          <generic-datepicker [(model)]="refundSearch.startDate" label="Date de début" [form]="refundForm"
+            propertyName="startDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
+        </td>
+        <td>
+          <generic-datepicker [(model)]="refundSearch.endDate" label="Date de fin" [form]="refundForm"
+            propertyName="endDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
         </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchRefunds()" class="add-button">
