--- a/client/src/app/modules/quotation/components/announcement-list/announcement-list.component.html
+++ b/client/src/app/modules/quotation/components/announcement-list/announcement-list.component.html
@@ -9,10 +9,13 @@
           </select-provision-stauts>
         </td>
         <td>
-          <generic-date-range-picker [(modelStart)]="announcementSearch.startDate"
-            [(modelEnd)]="announcementSearch.endDate" label="Plage de recherche" [form]="announcementListForm"
-            propertyNameStart="startDate" propertyNameEnd="endDate">
-          </generic-date-range-picker>
+          <generic-datepicker [(model)]="announcementSearch.startDate" label="Date de début"
+            [form]="announcementListForm" propertyName="startDate" [isMandatory]="false"
+            [isDisabled]="false"></generic-datepicker>
+        </td>
+        <td>
+          <generic-datepicker [(model)]="announcementSearch.endDate" label="Date de fin" [form]="announcementListForm"
+            propertyName="endDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
         </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchAnnouncements()" class="add-button">
