--- a/client/src/app/modules/quotation/components/ordering-list/ordering-list.component.html
+++ b/client/src/app/modules/quotation/components/ordering-list/ordering-list.component.html
@@ -18,10 +18,12 @@
             [defaultCodesSelected]="defaultStatusFilter"></select-customer-order-status>
         </td>
         <td *ngIf=" !isForTiersIntegration">
-          <generic-date-range-picker [(modelStart)]="orderingSearch.startDate" [(modelEnd)]="orderingSearch.endDate"
-            label="Date de création" [form]="orderingSearchForm" propertyNameStart="startDate"
-            propertyNameEnd="endDate">
-          </generic-date-range-picker>
+          <generic-datepicker [(model)]="orderingSearch.startDate" label="Date de début" [form]="orderingSearchForm"
+            propertyName="startDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
+        </td>
+        <td *ngIf=" !isForTiersIntegration">
+          <generic-datepicker [(model)]="orderingSearch.endDate" label="Date de fin" [form]="orderingSearchForm"
+            propertyName="endDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
         </td>
         <td *ngIf="isForPaymentAssocationIntegration">
           <generic-input [(model)]="orderingSearch.idCustomerOrder" label="Numéro de commande"
