--- a/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
+++ b/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
@@ -18,10 +18,12 @@
           </select-quotation-status>
         </td>
         <td *ngIf=" !isForTiersIntegration">
-          <generic-date-range-picker [(modelStart)]="quotationSearch.startDate" [(modelEnd)]="quotationSearch.endDate"
-            label="Date de création" [form]="quotationSearchForm" propertyNameStart="startDate" [isMandatory]="false"
-            propertyNameEnd="endDate">
-          </generic-date-range-picker>
+          <generic-datepicker [(model)]="quotationSearch.startDate" label="Date de début" [form]="quotationSearchForm"
+            propertyName="startDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
+        </td>
+        <td *ngIf=" !isForTiersIntegration">
+          <generic-datepicker [(model)]="quotationSearch.endDate" label="Date de fin" [form]="quotationSearchForm"
+            propertyName="endDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
         </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchOrders()" class="add-button">
