--- a/client/src/app/modules/tiers/components/tiers-list/tiers-list.component.html
+++ b/client/src/app/modules/tiers/components/tiers-list/tiers-list.component.html
@@ -20,10 +20,12 @@
                   [authorizeNonIndividualTiers]="true"></autocomplete-tiers-individual>
               </td>
               <td>
-                <generic-date-range-picker [(modelStart)]="tiersSearch.startDate" [(modelEnd)]="tiersSearch.endDate"
-                  label="Plage de recherche" [form]="tiersSearchForm" propertyNameStart="startDate"
-                  propertyNameEnd="endDate">
-                </generic-date-range-picker>
+                <generic-datepicker [(model)]="tiersSearch.startDate" label="Date de début" [form]="tiersSearchForm"
+                  propertyName="startDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
+              </td>
+              <td>
+                <generic-datepicker [(model)]="tiersSearch.endDate" label="Date de fin" [form]="tiersSearchForm"
+                  propertyName="endDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
               </td>
               <td class="fab-td-button">
                 <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchTiers()" class="add-button">
@@ -63,10 +65,14 @@
                   label='Responsable' propertyName="responsable" [isMandatory]="false"></autocomplete-responsable>
               </td>
               <td>
-                <generic-date-range-picker [(modelStart)]="responsableSearch.startDate"
-                  [(modelEnd)]="responsableSearch.endDate" label="Plage de recherche" [form]="responsableSearchForm"
-                  propertyNameStart="startDate" propertyNameEnd="endDate">
-                </generic-date-range-picker>
+                <generic-datepicker [(model)]="responsableSearch.startDate" label="Date de début"
+                  [form]="responsableSearchForm" propertyName="startDate" [isMandatory]="false"
+                  [isDisabled]="false"></generic-datepicker>
+              </td>
+              <td>
+                <generic-datepicker [(model)]="responsableSearch.endDate" label="Date de fin"
+                  [form]="responsableSearchForm" propertyName="endDate" [isMandatory]="false"
+                  [isDisabled]="false"></generic-datepicker>
               </td>
               <td class="fab-td-button">
                 <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchResponsables()"
